# bounce-normalizer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bounce-normalizer.functions.json  bounce-normalizer.hsl  rust-example.functions.json  rust-example.hsl  rust-example.schema.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/smtpd/src/config/: smtpd.yaml
src/: bounce-normalizer.rs  rust-example.rs
