[package]
name = "bounce_normalizer"
description = "Halon extras bounce-normalizer"
version = "1.0.0"
authors = ["Halon <support@halon.io>"]
edition = "2021"

[lib]
name = "bounce_normalizer"
path = "src/bounce-normalizer.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.155"

[build-dependencies]
bindgen = "0.69.4"
