[package]
name = "bounce_normalizer"
description = "Halon extras bounce-normalizer"
version = "1.0.0"
authors = ["Halon <support@halon.io>"]
edition = "2021"

[lib]
name = "bounce_normalizer"
path = "src/bounce-normalizer.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.155"
halon_rust_tokenizer= { git = "https://github.com/halon/halon_smtp_reason_normalizer.git", tag = "v1.3.1" }

[build-dependencies]
bindgen = "0.69.4"
